--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@strapi/provider-email-sendgrid": "^4.1.5",
     "@strapi/strapi": "4.1.5",
     "nodemailer": "^6.7.3",
+    "pg": "^8.7.3",
+    "pg-connection-string": "^2.5.0",
     "sqlite3": "5.0.2"
   },
   "author": {
