--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-i18n": "4.1.5",
     "@strapi/plugin-users-permissions": "4.1.5",
     "@strapi/provider-email-sendgrid": "^4.1.5",
+    "@strapi/provider-upload-cloudinary": "^4.1.11",
     "@strapi/strapi": "4.1.5",
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
