--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-email-sendgrid": "^4.1.5",
     "@strapi/provider-upload-cloudinary": "^4.1.11",
     "@strapi/strapi": "4.1.5",
+    "moment": "^2.29.4",
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "pg-connection-string": "^2.5.0",
